# MovingAverages

./: .gitignore  CMakeLists.txt  README.md
MovingAverages/: ConvolutedMovingAverage.h  GenericMovingAverage.h  GenericMovingAverage.tpp  MovingAverage.cpp  MovingAverage.h
include/: ArduinoTypes.h  generate_data.cpp  generate_data.h
include/MovingAverages/averages/: ConvolutedMovingAverage.h  GenericMovingAverage.h  MovingAverage.h
include/MovingAverages/util/: VectorUtils.h  generate_data.h
src/: main.cpp
src/averages/: ConvolutedMovingAverage.cpp  GenericMovingAverage.tpp  MovingAverage.cpp
src/util/: VectorUtils.tpp  generate_data.cpp
util/: VectorUtils.h  VectorUtils.tpp
